# call_me_maybe

./: Makefile  README.md  pyproject.toml
data/input/: function_calling_edge_cases.json  function_calling_tests.json  functions_definition.json
data/output/: edge_case_results.json  results.json
src/: Model.py  Parser.py  PromptProcessor.py  __init__.py  __main__.py  schemas.py
src/parsing/: Parser.py  schemas.py
src/processing/: Model.py
